fluxcd/infrastructure/configs/overlays/production/cilium-policies/swift-sail/cnp-arr-mesh.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-arr-mesh
spec:
  description: >-
    Allow arr apps to communicate within swift-sail namespace.
    jellyseerr/overseerr forward requests to sonarr/radarr/lidarr.
    downloadarrs aggregates multiple arr backends.
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchLabels:
      policy.prplanit.com/ingress: "true"
  ingress:
    - fromEndpoints:
        - matchLabels:
            policy.prplanit.com/ingress: "true"
      toPorts:
        - ports:
            - port: "5055"
              protocol: TCP
            - port: "6767"
              protocol: TCP
            - port: "7878"
              protocol: TCP
            - port: "8686"
              protocol: TCP
            - port: "8787"
              protocol: TCP
            - port: "8989"
              protocol: TCP
            - port: "9696"
              protocol: TCP
            - port: "6887"
              protocol: TCP
