fluxcd/infrastructure/configs/overlays/production/cilium-policies/swift-sail/cnp-gatus-probes.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-gatus-pinchflat
spec:
  description: >-
    Allow Gatus to probe pinchflat on non-standard port 8945.
  enableDefaultDeny:
    ingress: false
    egress: false
  endpointSelector:
    matchLabels:
      app: pinchflat
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: gossip-stone
            app.kubernetes.io/name: gatus
      toPorts:
        - ports:
            - port: "8945"
              protocol: TCP
